[package]
name = "killswitch"
version = "0.1.0"
authors = ["Jan Danielsson <jan.danielsson@qrnch.com>"]
edition = "2018"
license = "0BSD"
categories = [ "asynchronous" ]
keywords = [ "shutdown", "async"  ]
repository = "https://github.com/openqrnch/killswitch"
description = "Broadcast a task termination request."
exclude = [ "rustfmt.toml" ]

[dependencies]

[dev-dependencies]
tokio = { verison = "1", features = ["macros", "rt-multi-thread", "time"] }

